[package]
name = "rpki-rewind"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = "0.4.41"
clokwerk = "0.4.0"
daemonbase = "0.1.3"
futures-util = "0.3.31"
hex = "0.4.3"
log = "0.4.27"
reqwest = { version = "0.12.23", features = ["json", "stream"] }
rpki = { version = "0.18.6", features = ["repository", "rrdp", "serde-support"] }
serde_json = "1.0.142"
sha2 = "0.10.9"
sqlx = { version = "0.8", features = [ "runtime-tokio", "tls-native-tls", "postgres" ] }
tar = "0.4.44"
tokio = { version = "1.47.1", features = ["rt", "macros", "rt-multi-thread", "fs"] }
