[package]
name = "rpki-rewind"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.4"
bytes = "1.10.1"
chrono = "0.4.41"
clap = { version = "4.5.45", features = ["derive"] }
clokwerk = "0.4.0"
colog = "1.3.0"
flate2 = "1.1.2"
futures-util = "0.3.31"
hex = "0.4.3"
log = "0.4.27"
rand = "0.9.2"
reqwest = { version = "0.12.23", features = ["json", "stream"] }
rpki = { version = "0.18.6", features = ["repository", "rrdp", "serde-support"]}
serde = "1.0.219"
serde_json = "1.0.142"
sha2 = "0.10.9"
sqlx = { version = "0.8", features = ["runtime-tokio", "tls-native-tls", "postgres", "json"] }
tar = "0.4.44"
tempfile = "3.21.0"
tokio = { version = "1.47.1", features = ["rt", "macros", "rt-multi-thread", "fs"] }
tokio-util = "0.7.16"
url = "2.5.7"
walkdir = "2.5.0"
